5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1671_1107.log
== TEST (2019-04-28 12:37:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != "0") and (x != "1") and (x != "2") and (x != "3") and (x != "4")
	and (x != "5") and (x != "6")):
	print("A entrada" , x , "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:37:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != "0") and (x != "1") and (x != "2") and (x != "3") and (x != "4")
	and (x != "5") and (x != "6")):
	print("A entrada" , x , "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:38:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != "0") or (x != "1") or (x != "2") or (x != "3") or (x != "4")
	or (x != "5") or (x != "6")):
	print("A entrada" , x , "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:38:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != "0") or (x != "1") or (x != "2") or (x != "3") or (x != "4")
	or (x != "5") or (x != "6")):
	print("A entrada" , x , "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:42:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != 0) or (x != 1) or (x != 2) or (x != 3) or (x != 4)
	or (x != 5) or (x != 6)):
	print("A entrada" , x , "eh invalida")
elif (x = 0):
	print("domigo")
elif (x = 1):
	print("segunda")
elif (x = 2):
	print("terca")
elif (x = 3):
	print("quarta")
elif (x = 4):
	print("quinta")

-- ERROR:
File "XXXX", line 9
    elif (x = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:43:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != 0) or (x != 1) or (x != 2) or (x != 3) or (x != 4)
	or (x != 5) or (x != 6)):
	print("A entrada" , x , "eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:43:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != 0) or (x != 1) or (x != 2) or (x != 3) or (x != 4)
	or (x != 5) or (x != 6)):
	print("A entrada" , x , "eh invalida")
else:
	print("entrada valuda")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:44:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != 0) and (x != 1) and (x != 2) and (x != 3) and (x != 4)
	and (x != 5) and (x != 6)):
	print("A entrada" , x , "eh invalida")
else:
	print("entrada valuda")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:44:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != 0) and (x != 1) and (x != 2) and (x != 3) and (x != 4)
	and (x != 5) and (x != 6)):
	print("A entrada" , x , "eh invalida")
else:
	print("entrada valuda")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:44:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != 0) and (x != 1) and (x != 2) and (x != 3) and (x != 4)
	and (x != 5) and (x != 6)):
	print("A entrada" , x , "eh invalida")
else:
	print("entrada valuda")
-- EXECUTION TIME:
0.120526
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
entrada valuda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:44:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("dia:"))

if ((x != 0) and (x != 1) and (x != 2) and (x != 3) and (x != 4)
	and (x != 5) and (x != 6)):
	print("A entrada" , x , "eh invalida")
else:
	print("entrada valuda")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:02:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
